--- a/requirements/requirements-mujoco.txt
+++ b/requirements/requirements-mujoco.txt
@@ -1,5 +1,5 @@
 gym
-gymnasium[mujoco]
+gymnasium[mujoco]<1.0.0
 jax-jumpy==1.0.0 ; python_version >= "3.8" and python_version < "3.11"
 matplotlib
 moviepy
@@ -10,6 +10,6 @@ pygame
 stable-baselines3
 tqdm
 wandb
-torchrl-nightly
-tensordict-nightly
+torchrl
+tensordict
 tyro
