--- a/requirements/requirements-jax.txt
+++ b/requirements/requirements-jax.txt
@@ -1,6 +1,6 @@
 flax==0.6.8
 gym
-gymnasium
+gymnasium<1.0.0
 jax-jumpy==1.0.0
 jax-jumpy==1.0.0
 jax[cuda]==0.4.8
@@ -11,8 +11,8 @@ pandas
 protobuf
 pygame
 stable-baselines3
-tensordict-nightly
-torchrl-nightly
+tensordict
+torchrl
 tqdm
 tyro
 wandb
