--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,4 +1,4 @@
-gymnasium
+gymnasium<1.0.0
 jax-jumpy==1.0.0 ; python_version >= "3.8" and python_version < "3.11"
 matplotlib
 moviepy
@@ -9,6 +9,6 @@ pygame
 stable-baselines3
 tqdm
 wandb
-torchrl-nightly
-tensordict-nightly
+torchrl
+tensordict
 tyro
