--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-gymnasium[atari,accept-rom-license]
-jax-jumpy==1.0.0
-jax[cuda]==0.4.8
+gymnasium[atari,accept-rom-license]==0.29.1
+# jax-jumpy==1.0.0
+# jax[cuda]==0.4.8
+jax[cuda12] -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 flax==0.6.8
 matplotlib
 moviepy
